<resources>
    <string name="app_name">Umpire Buddy</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="strike_btn">Strike</string>
    <string name="ball_btn">Ball</string>
    <string name="ball_lbl">Ball:</string>
    <string name="strike_lbl">Strike:</string>
    <string name="ball_cnt">0</string>
    <string name="strike_cnt">0</string>
    <string name="total_outs_cnt">0</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="about_text">Umpire Buddy by Evan Bell</string>
    <string name="total_outs_lbl">Total Outs:</string>
</resources>
