<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".UmpireActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strike_btn"
        android:id="@+id/strike_btn"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/ball_lbl"
        android:layout_alignStart="@+id/ball_lbl" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ball_btn"
        android:id="@+id/ball_btn"
        android:layout_marginRight="56dp"
        android:layout_marginEnd="56dp"
        android:layout_alignTop="@+id/strike_btn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ball_lbl"
        android:id="@+id/ball_lbl"
        android:layout_alignTop="@+id/ball_cnt_lbl"
        android:layout_alignLeft="@+id/strike_lbl"
        android:layout_alignStart="@+id/strike_lbl" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/strike_lbl"
        android:id="@+id/strike_lbl"
        android:layout_marginTop="73dp"
        android:layout_marginLeft="70dp"
        android:layout_marginStart="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ball_cnt"
        android:id="@+id/ball_cnt_lbl"
        android:layout_below="@+id/strike_cnt_lbl"
        android:layout_alignLeft="@+id/strike_cnt_lbl"
        android:layout_alignStart="@+id/strike_cnt_lbl"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/strike_cnt"
        android:id="@+id/strike_cnt_lbl"
        android:layout_alignTop="@+id/strike_lbl"
        android:layout_alignLeft="@+id/ball_btn"
        android:layout_alignStart="@+id/ball_btn" />

</RelativeLayout>
